# probeye

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: push.yaml  python-app.yml
docs/: api.md  components.rst  conf.py  correlation.rst  for_contributors.md  index.md  installation.md  mathematics.rst  motivation.md  ontology.rst  references.bib  references.md
docs/_static/js/: custom.js
docs/auto_examples/: index.rst  plot_linear_regression.ipynb  plot_linear_regression.py  plot_linear_regression.py.md5  plot_linear_regression.rst  plot_linear_regression_codeobj.pickle  plot_maximum_likelihood.ipynb  plot_maximum_likelihood.py  plot_maximum_likelihood.py.md5  plot_maximum_likelihood.rst  plot_maximum_likelihood_codeobj.pickle  sg_execution_times.rst
docs/examples/: README.txt  bias.py  plot_correlation_1D.py  plot_linear_regression.py  plot_time_space_correlation.py
examples/: example_linear_regression.py  example_multiple_sensors.py  example_prior_calibration.py  example_surrogate_hartman6D.py  example_two_models.py
probeye/: __init__.py  _setup_cfg.py  correlation.py  forward_model.py  inference_problem.py  jacobian.py  noise.py  parameter.py  parameter_estimation_ontology.owl  priors.py  probeye.txt  solver.py  subroutines.py
probeye/definition/: __init__.py  biased_inverse_problem.py  correlation_model.py  distribution.py  experiment.py  forward_model.py  inference_problem.py  inverse_problem.py  likelihood_model.py  noise_model.py  parameter.py  prior.py  sensor.py  surrogate_model.py
probeye/inference/: __init__.py  distributions.py  likelihood_models.py  priors.py  solver.py
probeye/inference/bias/: __init__.py  likelihood_models.py  solver.py
probeye/inference/dynesty/: __init__.py  solver.py
probeye/inference/dynesty_/: __init__.py  solver.py
probeye/inference/emcee/: __init__.py  solver.py
probeye/inference/emcee_/: __init__.py  noise_models.py  postprocessing.py  priors.py  solver.py
probeye/inference/koh/: __init__.py  likelihood_models.py  solver.py
probeye/inference/scipy/: __init__.py  correlation_models.py  distributions.py  likelihood_models.py  priors.py  solver.py
probeye/inference/scipy_/: __init__.py  correlation_models.py  likelihood_models.py  noise_models.py  priors.py  solver.py
probeye/inference/taralli_/: __init__.py  noise_models.py  postprocessing.py  priors.py  solver.py
probeye/inference/torch/: __init__.py  likelihood_models.py  priors.py  solver.py  (+1 more)
probeye/interface/: __init__.py  export_rdf.py  knowledge_graph_export.py
probeye/metamodeling/: initial_sampling.py  sampling.py  surrogating.py
probeye/ontology/: __init__.py  knowledge_graph_export.py  knowledge_graph_import.py  parameter_estimation_ontology.owl
probeye/postprocessing/: __init__.py  postprocessing.py  sampling.py  sampling_plots.py
probeye/solver/: __init__.py  taralli.py
probeye/surrogate/: __init__.py  initial_sampling.py
tests/: test_forward_model.py  test_inference_problem.py  test_solver.py  test_subroutines.py
tests/integration_tests/: __init__.py  subroutines.py  test_linear_regression.py  test_maximum_likelihood.py  test_multiple_sensors.py  test_multivariate_prior.py  test_prior_calibration.py  test_rdf_export.py  test_spatial_correlation.py  test_time_correlation.py  test_time_correlation_old.py  test_time_space_correlation.py  test_two_models.py
tests/solver/: test_solver.py
tests/unit_tests/: test_forward_model.py  test_noise.py  test_parameter.py  test_priors.py  test_setup_cfg.py  test_subroutines.py
(+86 files in other folders)
