[metadata]
name = probeye
version = 1.0.14
author = Alexander Klawonn
author_email = alexander.klawonn@bam.de
description = A general framework for setting up parameter estimation problems.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
license_files = LICENSE

[options]
python_requires = >= 3.6
packages = find:
include_package_data = True
install_requires =
    numpy<2
    scipy<2
    matplotlib<4
    emcee<4
    tabulate<1
    torch<2
    pyro-ppl<2
    arviz<1
    loguru<1
    rdflib<7
    owlready2<1

[options.package_data]
probeye = probeye.txt, parameter_estimation_ontology.owl

[options.extras_require]
tests =
    pytest
    coverage[toml]

lint_type_checks =
    pre-commit
