[metadata]
name = probeye
version = attr: probeye.__version__
author = Alexander Klawonn
author_email = alexander.klawonn@bam.de
description = A general framework for setting up parameter estimation problems.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
license_files = LICENSE

[options]
python_requires = >= 3.7
packages = find:
include_package_data = True
install_requires =
    numpy<2
    scipy<2
    matplotlib<4
    emcee<4
    tabulate<1
    arviz<1
    loguru<1
    rdflib<7
    owlready2<1
    dynesty
    tri-py<1

[options.package_data]
probeye = 
    probeye.txt
    ontology/parameter_estimation_ontology.owl

[options.extras_require]
tests =
    pytest
    coverage[toml]

lint_type_checks =
    pre-commit

docs =
    sphinx >=3, <5
    sphinx_gallery<1
    sphinx-copybutton<1
    sphinx-inline-tabs
    sphinxcontrib-bibtex<3
    myst-parser<1
    furo
